# AlgoTrading

./: LICENSE  README.md  pyproject.toml
src/: TecXvenv.sh
src/TecXAT_tecx_algo/: TecXAT.py
src/zerodha/java/: algo.html  algotrading.html
src/zerodha/py/: algo_trading.py  algo_trading_for_any_stock.py  deploy.sh  execute_ai_based_trading_based_on_prediction.py  execute_for_any.py  historical_data_csv.py  instrument_csv.perl  lets_start.sh  market_data_csv.py  requirement.txt  zerodha_login_Automate.py
src/zerodha/python/: Advanced_Greeks-Based_Hedging.py  deploy.sh  read.md
src/zerodha/python/Advanced_Greeks-Based_Hedging/: agbh.sh  gamma_scalping_strategy.py  vega_management_strategy.py
src/zerodha/python/advanced/: a  deploy_ml-based_trading.sh  ml-based_algo_trading_strategy.py  ml-based_algo_trading_strategy_without_smart_sl-tl.py
src/zerodha/python/advanced-ai_for_market_anomaly_detection/: advanced-ai_for_market_anomaly_detection.sh  automate_ai-based_anomaly_detection.py
src/zerodha/python/advanced_ai_for_hedging_and_portfolio_optimization/: advanced_ai_for_hedging_and_portfolio_optimization.sh  ai-based_automated_hedging_execution.py  ai-based_hedging_strategy_for_options_and_futures.py  ai-powered_portfolio_optimization.py  load_and_prepare_portfolio_data.py
src/zerodha/python/advanced_ai_for_market_anomaly_detection/: advanced_ai_for_market_anomaly_detection.sh  ai_based_automated_anomaly_response.py  detect_market_anomalies_in_real-time.py  load_and_prepare_market_data.py  train_an_ai_anomaly_detection_model.py
(+56 files in other folders)
