[project]
name = "TecXAT_AlgoTradingTecX"
version = "0.0.1"
authors = [
  { name="Rahul Saini", email="cto@TecX.ai" },
]
description = "TecX Algo Trading package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/AlgoTradingTecX/AlgoTrading"
Issues = "https://github.com/AlgoTradingTecX/AlgoTrading/issues"
